Presentation: Move directory and compile tex

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -8,8 +8,8 @@
 \subtitle{STA130 Course Project}
 
 \author[STA130] % (optional, for multiple authors)
-{Edie Chen$^1$ \and Jason Li \and Zain Mahmoud \and Rana Nagash\\
-TA: Oliver Gatalo\\
+{Edie Chen \and Jason Li \and Zain Mahmoud \and Rana Nagash\\
+TA Oliver Gatalo\\
 Professor Scott Schwartz}
 
 \institute[UofT] % (optional)
