--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -275,15 +275,15 @@ How many days people feel lonely in a week is not reflective of how lonely they 
 \begin{frame}{Visualization of the Raw Data}
 
 
-\includegraphics[width=0.5\linewidth]{presentation/Screenshot 2024-11-28 at 12.28.29 PM.png}
-\includegraphics[width=0.5\linewidth]{presentation/Screenshot 2024-11-28 at 12.31.04 PM.png}
+\includegraphics[width=0.5\linewidth]{Screenshot 2024-11-28 at 12.28.29 PM.png}
+\includegraphics[width=0.5\linewidth]{Screenshot 2024-11-28 at 12.31.04 PM.png}
 
 
 \end{frame}
 
 \begin{frame}{Simple Linear Regression & Data Wrangling}
 
-\includegraphics[width=0.5\linewidth]{presentation/Screenshot 2024-11-28 at 12.32.21 PM.png}
+\includegraphics[width=0.5\linewidth]{Screenshot 2024-11-28 at 12.32.21 PM.png}
 
 We first tried to analyse the 2 factors separately with simple linear regression\\
 The fitting of the model was poor (R square = 0.01)\\
