--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -207,6 +207,16 @@ The confidence interval we constructed only contained negative slopes between $-
     
 \end{frame}
 
+\begin{frame}
+    \frametitle{Bar plot}
+
+    \begin{figure}
+        \centering
+        \includegraphics[width=1\linewidth]{jason_barplot.png}
+    \end{figure}
+
+\end{frame}
+
 
 \begin{frame}
 
