--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -342,7 +342,7 @@ Contacting others a few times a month via video chat and test seems to reduce lo
 
 \begin{frame}{Future Directions & Acknowledgments}
 \textbf{Acknowledgments:}\\
-We would like to thank Dr. Kiffer Card and Ms. Christine Ovcaric for providing this valuable opportunity. Special thanks to Prof. Schott, our TA, and all the teaching assistants for their guidance and support throughout the project.
+We would like to thank Dr. Kiffer Card and Ms. Christine Ovcaric for providing this valuable opportunity. Special thanks to Prof. Scott, our TA, and all the teaching assistants for their guidance and support throughout the project.
 \end{frame}
 
 \end{document}
