--- a/Jason_analysis.ipynb
+++ b/Jason_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "[692 rows x 6 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -317,10 +317,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   1.480</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Thu, 28 Nov 2024</td> <th>  Prob (F-statistic):</th>  <td>0.0217</td> \n",
+       "  <th>Date:</th>             <td>Sun, 01 Dec 2024</td> <th>  Prob (F-statistic):</th>  <td>0.0217</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>22:48:59</td>     <th>  Log-Likelihood:    </th> <td> -1152.3</td>\n",
+       "  <th>Time:</th>                 <td>16:37:00</td>     <th>  Log-Likelihood:    </th> <td> -1152.3</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   692</td>      <th>  AIC:               </th> <td>   2403.</td>\n",
@@ -509,8 +509,8 @@
        "\\textbf{Dep. Variable:}                                                                        &   DepressionN    & \\textbf{  R-squared:         } &     0.100   \\\\\n",
        "\\textbf{Model:}                                                                                &       OLS        & \\textbf{  Adj. R-squared:    } &     0.032   \\\\\n",
        "\\textbf{Method:}                                                                               &  Least Squares   & \\textbf{  F-statistic:       } &     1.480   \\\\\n",
-       "\\textbf{Date:}                                                                                 & Thu, 28 Nov 2024 & \\textbf{  Prob (F-statistic):} &   0.0217    \\\\\n",
-       "\\textbf{Time:}                                                                                 &     22:48:59     & \\textbf{  Log-Likelihood:    } &   -1152.3   \\\\\n",
+       "\\textbf{Date:}                                                                                 & Sun, 01 Dec 2024 & \\textbf{  Prob (F-statistic):} &   0.0217    \\\\\n",
+       "\\textbf{Time:}                                                                                 &     16:37:00     & \\textbf{  Log-Likelihood:    } &   -1152.3   \\\\\n",
        "\\textbf{No. Observations:}                                                                     &         692      & \\textbf{  AIC:               } &     2403.   \\\\\n",
        "\\textbf{Df Residuals:}                                                                         &         643      & \\textbf{  BIC:               } &     2625.   \\\\\n",
        "\\textbf{Df Model:}                                                                             &          48      & \\textbf{                     } &             \\\\\n",
@@ -592,8 +592,8 @@
        "Dep. Variable:            DepressionN   R-squared:                       0.100\n",
        "Model:                            OLS   Adj. R-squared:                  0.032\n",
        "Method:                 Least Squares   F-statistic:                     1.480\n",
-       "Date:                Thu, 28 Nov 2024   Prob (F-statistic):             0.0217\n",
-       "Time:                        22:48:59   Log-Likelihood:                -1152.3\n",
+       "Date:                Sun, 01 Dec 2024   Prob (F-statistic):             0.0217\n",
+       "Time:                        16:37:00   Log-Likelihood:                -1152.3\n",
        "No. Observations:                 692   AIC:                             2403.\n",
        "Df Residuals:                     643   BIC:                             2625.\n",
        "Df Model:                          48                                         \n",
@@ -662,7 +662,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
        "27     -1.9651      0.987     -1.991  0.047     -3.903     -0.027  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -874,8 +874,7 @@
        "      <th>P&gt;|t|</th>\n",
        "      <th>[0.025</th>\n",
        "      <th>0.975]</th>\n",
-       "      <th>value</th>\n",
-       "      <th>depression_value</th>\n",
+       "      <th>yhat</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -889,7 +888,6 @@
        "      <td>2.316</td>\n",
        "      <td>2.793</td>\n",
        "      <td>2.5546</td>\n",
-       "      <td>Rarely</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -901,7 +899,6 @@
        "      <td>0.255</td>\n",
        "      <td>3.302</td>\n",
        "      <td>4.3333</td>\n",
-       "      <td>Very Often</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -913,7 +910,6 @@
        "      <td>-1.024</td>\n",
        "      <td>-0.278</td>\n",
        "      <td>1.9036</td>\n",
-       "      <td>Almost never</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -925,7 +921,6 @@
        "      <td>-0.794</td>\n",
        "      <td>-0.037</td>\n",
        "      <td>2.1392</td>\n",
-       "      <td>Rarely</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -937,7 +932,6 @@
        "      <td>-1.260</td>\n",
        "      <td>-0.325</td>\n",
        "      <td>1.7619</td>\n",
-       "      <td>Almost never</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
@@ -949,7 +943,6 @@
        "      <td>-4.447</td>\n",
        "      <td>-0.533</td>\n",
        "      <td>0.0648</td>\n",
-       "      <td>Never</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
@@ -961,7 +954,6 @@
        "      <td>-3.170</td>\n",
        "      <td>-0.118</td>\n",
        "      <td>0.9106</td>\n",
-       "      <td>Never</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
@@ -973,7 +965,6 @@
        "      <td>-3.903</td>\n",
        "      <td>-0.027</td>\n",
        "      <td>0.5895</td>\n",
-       "      <td>Never</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -990,28 +981,18 @@
        "24            C(OnlineGamesC)[T.Daily or almost daily]:C(WalkWithSomeoneC)[T.Monthly]   \n",
        "27  C(OnlineGamesC)[T.A few times a month]:C(WalkWithSomeoneC)[T.A few times a month]   \n",
        "\n",
-       "          coef    std err          t  P>|t|     [0.025     0.975]   value  \\\n",
-       "0       2.5546      0.122     21.001  0.000      2.316      2.793  2.5546   \n",
-       "3       1.7787      0.776      2.293  0.022      0.255      3.302  4.3333   \n",
-       "10     -0.6510      0.190     -3.430  0.001     -1.024     -0.278  1.9036   \n",
-       "11     -0.4154      0.193     -2.157  0.031     -0.794     -0.037  2.1392   \n",
-       "12     -0.7927      0.238     -3.328  0.001     -1.260     -0.325  1.7619   \n",
-       "21     -2.4898      0.997     -2.498  0.013     -4.447     -0.533  0.0648   \n",
-       "24     -1.6440      0.777     -2.115  0.035     -3.170     -0.118  0.9106   \n",
-       "27     -1.9651      0.987     -1.991  0.047     -3.903     -0.027  0.5895   \n",
-       "\n",
-       "   depression_value  \n",
-       "0            Rarely  \n",
-       "3        Very Often  \n",
-       "10     Almost never  \n",
-       "11           Rarely  \n",
-       "12     Almost never  \n",
-       "21            Never  \n",
-       "24            Never  \n",
-       "27            Never  "
+       "          coef    std err          t  P>|t|     [0.025     0.975]    yhat  \n",
+       "0       2.5546      0.122     21.001  0.000      2.316      2.793  2.5546  \n",
+       "3       1.7787      0.776      2.293  0.022      0.255      3.302  4.3333  \n",
+       "10     -0.6510      0.190     -3.430  0.001     -1.024     -0.278  1.9036  \n",
+       "11     -0.4154      0.193     -2.157  0.031     -0.794     -0.037  2.1392  \n",
+       "12     -0.7927      0.238     -3.328  0.001     -1.260     -0.325  1.7619  \n",
+       "21     -2.4898      0.997     -2.498  0.013     -4.447     -0.533  0.0648  \n",
+       "24     -1.6440      0.777     -2.115  0.035     -3.170     -0.118  0.9106  \n",
+       "27     -1.9651      0.987     -1.991  0.047     -3.903     -0.027  0.5895  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1029,13 +1010,30 @@
     "\n",
     "pd.set_option('display.max_colwidth', None)  # Show full content in each cell\n",
     "\n",
-    "filtered_summary = filtered_summary.assign(value=values, depression_value=depression_values)\n",
+    "filtered_summary = filtered_summary.assign(yhat=values)\n",
+    "# filtered_summary = filtered_summary.assign(depression_value=depression_values)\n",
     "filtered_summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted_filtered_summary = filtered_summary.sort_values(by=\"yhat\")\n",
+    "sorted_filtered_summary = sorted_filtered_summary.drop(0, axis=0)\n",
+    "\n",
+    "intercept_row = filtered_summary.loc[0]\n",
+    "\n",
+    "sorted_filtered_summary.loc[len(sorted_filtered_summary)] = intercept_row\n",
+    "\n",
+    "sorted_filtered_summary = sorted_filtered_summary.iloc[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1064,23 +1062,23 @@
          "x": [
           "Intercept",
           "C(OnlineGamesC)[T.A few times a month]",
-          "C(WalkWithSomeoneC)[T.Weekly]",
           "C(WalkWithSomeoneC)[T.A few times a week]",
+          "C(WalkWithSomeoneC)[T.Weekly]",
           "C(WalkWithSomeoneC)[T.Daily or almost daily]",
-          "C(OnlineGamesC)[T.A few times a month]:C(WalkWithSomeoneC)[T.Monthly]",
           "C(OnlineGamesC)[T.Daily or almost daily]:C(WalkWithSomeoneC)[T.Monthly]",
-          "C(OnlineGamesC)[T.A few times a month]:C(WalkWithSomeoneC)[T.A few times a month]"
+          "C(OnlineGamesC)[T.A few times a month]:C(WalkWithSomeoneC)[T.A few times a month]",
+          "C(OnlineGamesC)[T.A few times a month]:C(WalkWithSomeoneC)[T.Monthly]"
          ],
          "xaxis": "x",
          "y": [
           2.5546,
           4.3333,
-          1.9036000000000002,
           2.1392,
+          1.9036000000000002,
           1.7619000000000002,
-          0.06480000000000041,
           0.9106000000000003,
-          0.5895000000000001
+          0.5895000000000001,
+          0.06480000000000041
          ],
          "yaxis": "y"
         }
@@ -1931,6 +1929,10 @@
           0,
           1
          ],
+         "range": [
+          0,
+          5
+         ],
          "title": {
           "text": "How often depressed"
          }
@@ -1946,8 +1948,8 @@
     "import plotly.express as px\n",
     "\n",
     "# Create the bar plot using Plotly\n",
-    "fig = px.bar(filtered_summary, x='', y='value', \n",
-    "             labels={'coef': 'Independent Variables', 'value': 'How often depressed'},\n",
+    "fig = px.bar(sorted_filtered_summary, x='', y='yhat', \n",
+    "             labels={'coef': 'Independent Variables', 'yhat': 'How often depressed'},\n",
     "             title='')\n",
     "\n",
     "\n",
@@ -1959,13 +1961,16 @@
     "    height=800  # Adjust figure height\n",
     ")\n",
     "\n",
+    "# Force y-axis to a 0-5 scale\n",
+    "fig.update_yaxes(range=[0, 5])\n",
+    "\n",
     "# Show the plot\n",
     "fig.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1983,10 +1988,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   8.634</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Thu, 28 Nov 2024</td> <th>  Prob (F-statistic):</th> <td>0.000198</td>\n",
+       "  <th>Date:</th>             <td>Sun, 01 Dec 2024</td> <th>  Prob (F-statistic):</th> <td>0.000198</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>21:32:13</td>     <th>  Log-Likelihood:    </th> <td> -1180.0</td>\n",
+       "  <th>Time:</th>                 <td>16:37:01</td>     <th>  Log-Likelihood:    </th> <td> -1180.0</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   692</td>      <th>  AIC:               </th> <td>   2366.</td>\n",
@@ -2037,8 +2042,8 @@
        "\\textbf{Dep. Variable:}              &   DepressionN    & \\textbf{  R-squared:         } &     0.024   \\\\\n",
        "\\textbf{Model:}                      &       OLS        & \\textbf{  Adj. R-squared:    } &     0.022   \\\\\n",
        "\\textbf{Method:}                     &  Least Squares   & \\textbf{  F-statistic:       } &     8.634   \\\\\n",
-       "\\textbf{Date:}                       & Thu, 28 Nov 2024 & \\textbf{  Prob (F-statistic):} &  0.000198   \\\\\n",
-       "\\textbf{Time:}                       &     21:32:13     & \\textbf{  Log-Likelihood:    } &   -1180.0   \\\\\n",
+       "\\textbf{Date:}                       & Sun, 01 Dec 2024 & \\textbf{  Prob (F-statistic):} &  0.000198   \\\\\n",
+       "\\textbf{Time:}                       &     16:37:01     & \\textbf{  Log-Likelihood:    } &   -1180.0   \\\\\n",
        "\\textbf{No. Observations:}           &         692      & \\textbf{  AIC:               } &     2366.   \\\\\n",
        "\\textbf{Df Residuals:}               &         689      & \\textbf{  BIC:               } &     2380.   \\\\\n",
        "\\textbf{Df Model:}                   &           2      & \\textbf{                     } &             \\\\\n",
@@ -2074,8 +2079,8 @@
        "Dep. Variable:            DepressionN   R-squared:                       0.024\n",
        "Model:                            OLS   Adj. R-squared:                  0.022\n",
        "Method:                 Least Squares   F-statistic:                     8.634\n",
-       "Date:                Thu, 28 Nov 2024   Prob (F-statistic):           0.000198\n",
-       "Time:                        21:32:13   Log-Likelihood:                -1180.0\n",
+       "Date:                Sun, 01 Dec 2024   Prob (F-statistic):           0.000198\n",
+       "Time:                        16:37:01   Log-Likelihood:                -1180.0\n",
        "No. Observations:                 692   AIC:                             2366.\n",
        "Df Residuals:                     689   BIC:                             2380.\n",
        "Df Model:                           2                                         \n",
@@ -2098,7 +2103,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2116,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2125,7 +2130,7 @@
        "(553, 139)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2137,7 +2142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2152,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2568,7 +2573,7 @@
        "DecisionTreeClassifier(max_depth=7, random_state=10)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2579,7 +2584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2601,7 +2606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2610,7 +2615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2622,7 +2627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
